--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
         "build": "grunt build"
     },
     "devDependencies": {
+        "bower": "*",
+        "grunt": "*",
         "grunt-contrib-clean": "*",
         "grunt-contrib-connect": "*",
         "grunt-contrib-copy": "*",
@@ -15,7 +17,6 @@
         "grunt-contrib-stylus": "*",
         "grunt-contrib-uglify": "*",
         "grunt-contrib-watch": "*",
-        "grunt-include-replace": "*",
-        "grunt": "*"
+        "grunt-include-replace": "*"
     }
 }
