--- a/package.json
+++ b/package.json
@@ -4,19 +4,21 @@
     "author": "Argo Roots <argo@roots.ee>",
     "private": true,
     "scripts": {
+        "bower": "bower install",
+        "dev": "grunt",
         "build": "grunt build"
     },
     "devDependencies": {
-        "bower": "*",
-        "grunt": "*",
-        "grunt-contrib-clean": "*",
-        "grunt-contrib-connect": "*",
-        "grunt-contrib-copy": "*",
-        "grunt-contrib-cssmin": "*",
-        "grunt-contrib-jade": "*",
-        "grunt-contrib-stylus": "*",
-        "grunt-contrib-uglify": "*",
-        "grunt-contrib-watch": "*",
-        "grunt-include-replace": "*"
+        "bower": "1.8.14",
+        "grunt": "1.5.2",
+        "grunt-contrib-clean": "2.0.0",
+        "grunt-contrib-connect": "3.0.0",
+        "grunt-contrib-cssmin": "4.0.0",
+        "grunt-contrib-jade": "1.0.0",
+        "grunt-contrib-less": "3.0.0",
+        "grunt-contrib-stylus": "1.2.0",
+        "grunt-contrib-uglify": "5.1.0",
+        "grunt-contrib-watch": "1.1.0",
+        "grunt-include-replace": "5.0.0"
     }
 }
