Use Github actions for build

--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-    "name": "entu-inventuur",
-    "version": "0.1.0",
-    "author": "Argo Roots <argo@roots.ee>",
-    "private": true,
-    "scripts": {
-        "bower": "bower install",
-        "dev": "grunt",
-        "build": "grunt build"
-    },
-    "devDependencies": {
-        "bower": "1.8.14",
-        "grunt": "1.5.2",
-        "grunt-contrib-clean": "2.0.0",
-        "grunt-contrib-connect": "3.0.0",
-        "grunt-contrib-cssmin": "4.0.0",
-        "grunt-contrib-jade": "1.0.0",
-        "grunt-contrib-less": "3.0.0",
-        "grunt-contrib-stylus": "1.2.0",
-        "grunt-contrib-uglify": "5.1.0",
-        "grunt-contrib-watch": "1.1.0",
-        "grunt-include-replace": "5.0.0"
-    }
+  "name": "entu-inventuur",
+  "version": "0.1.0",
+  "private": true,
+  "description": "",
+  "author": "Argo Roots <argo@roots.ee>",
+  "license": "MIT",
+  "scripts": {
+    "bower": "bower install",
+    "dev": "grunt",
+    "build": "grunt build"
+  },
+  "devDependencies": {
+    "bower": "1.8.14",
+    "grunt": "1.5.2",
+    "grunt-contrib-clean": "2.0.0",
+    "grunt-contrib-connect": "3.0.0",
+    "grunt-contrib-cssmin": "4.0.0",
+    "grunt-contrib-jade": "1.0.0",
+    "grunt-contrib-less": "3.0.0",
+    "grunt-contrib-stylus": "1.2.0",
+    "grunt-contrib-uglify": "5.1.0",
+    "grunt-contrib-watch": "1.1.0",
+    "grunt-include-replace": "5.0.0"
+  }
 }
