--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,7 +32,7 @@ jobs:
       with:
         node-version: 16.x
 
-    - name: Build Docs
+    - name: Build
       run: |
         npm install
         npm run bower
