--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "grunt": "1.5.3",
     "grunt-contrib-clean": "2.0.1",
     "grunt-contrib-connect": "3.0.0",
+    "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-cssmin": "4.0.0",
     "grunt-contrib-jade": "1.0.0",
     "grunt-contrib-less": "3.0.0",
