--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "grunt-contrib-connect": "3.0.0",
     "grunt-contrib-copy": "1.0.0",
     "grunt-contrib-cssmin": "4.0.0",
-    "grunt-contrib-jade": "1.0.0",
     "grunt-contrib-less": "3.0.0",
+    "grunt-contrib-pug": "3.0.0",
     "grunt-contrib-stylus": "1.2.0",
     "grunt-contrib-uglify": "5.2.2",
     "grunt-contrib-watch": "1.1.0",
